--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: python
 python:
   - "2.7"
 install:
-  sudo apt-get update -qq
-  sudo apt-get install -qq numpy python-scipy
-  pip install -U scikit-learn
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq numpy python-scipy
+  - pip install -U scikit-learn
 script:
-  python setup.py test
+  - python setup.py test
 
