--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "2.7"
 install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq numpy python-scipy
+  - sudo apt-get install -qq python-numpy python-scipy
   - pip install -U scikit-learn
 script:
   - python setup.py test
